# kernel

./: .deepsource.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RESOURCES.md  disk.img  rust-toolchain  rust-toolchain.toml  x86_64-martim.json
.cargo/: config.toml
.github/workflows/: build.yml  devskim.yml  lint.yml  qodana.yml  rust.yml
boot/: Cargo.toml
boot/src/: main.rs  test.rs
src/: allocator.rs  gdt.rs  interrupts.rs  kresult.rs  lib.rs  macros.rs  main.rs  memory.rs  serial.rs  time.rs  vfs_setup.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/collection/: deltaq.rs  lru.rs  mod.rs
src/device/block/: cache.rs  cow.rs  mod.rs  one.rs
src/driver/: mod.rs
src/driver/cmos/: mod.rs
src/driver/ide/: channel.rs  drive.rs  mod.rs
src/driver/pci/: classes.rs  device.rs  header.rs  mod.rs  raw.rs
src/filesystem/: file_descriptor.rs  flags.rs  inode.rs  mod.rs  path.rs  stat.rs  upnode.rs
src/filesystem/fat32/: mod.rs
src/filesystem/memfs/: memfd.rs  memfile.rs  mod.rs
src/filesystem/path/: components.rs  mod.rs  owned.rs
src/filesystem/vfs/: mod.rs  test_fs.rs  vnode.rs
src/io/: cursor.rs  from_read.rs  mod.rs  read.rs  read_at.rs  section_read.rs  test.rs
src/io/fs/: file_descriptor.rs  flags.rs  memfs.rs  mod.rs  nullfs.rs  perm.rs  rootdir.rs  stat.rs  upnode.rs  vfs.rs
src/io/fs/devfs/: mod.rs  null.rs  serial.rs  zero.rs
src/io/fs/device/: block.rs  mod.rs
src/io/fs/ext2/: base.rs  block_group.rs  dir.rs  file.rs  inode.rs  mod.rs  superblock.rs  symlink.rs
src/io/fs/memfs/: memfd.rs  memfile.rs  mod.rs
src/io/fs/path/: components.rs  mod.rs  owned.rs
src/io/fs/ustar/: header.rs  mod.rs
src/io/fs/vfs/: mod.rs  vnode.rs
src/memory/: heap.rs  kbuffer.rs  manager.rs  mod.rs  physical.rs  size.rs  span.rs
src/memory/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/memory/allocator/backend/: already_mapped.rs  lazy_page.rs  mod.rs
src/multitasking/: mod.rs  scheduler.rs  switch.rs
src/multitasking/process/: mod.rs
src/multitasking/thread/: mod.rs  stack.rs
src/scheduler/: mod.rs  pid.rs  priority.rs  queue.rs  round_robin.rs  scheduler.rs  switch.rs  task.rs  tid.rs
src/syscall/: error.rs  mod.rs  syscall.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_boot.rs  ext2.rs  heap_allocation.rs  ide.rs  ide_main.rs  kbuffer.rs  pci.rs  qemu_config.yaml  read_at_out_of_bounds_should_panic.rs  scheduler.rs  should_panic.rs  stack_overflow.rs  ustar.rs  vga.rs
tests/ide/: mod.rs
tests/resources/: ext2_filenames.img  ext2_fs.img  ext2_fs.sh  hello.tar
tests/resources/ext2_fs/symlinks/: symlink_folder  symlink_folder_file  symlink_long_path
tests/resources/ext2_fs/symlinks/directory/: symlink_folder
