[package]
name = "martim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[workspace]
members = [
    "boot",
]

[dependencies]
bitflags = "1.3.2"
bootloader = { git = "https://github.com/martimos/bootloader" }
kstd = "0.0.1"
linked_list_allocator = "0.10.1"
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
uart_16550 = "0.2.18"
volatile = "0.4.5"
x86_64 = "0.14.10"
bitfield = "0.14.0"

[dependencies.noto-sans-mono-bitmap]
version = "0.1.5"
default-features = false
features = ["regular", "size_14"]

[dependencies.futures-util]
version = "0.3.21"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.6"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true
map-framebuffer = true
framebuffer-address = 0xb8000

#[package.metadata.bootimage]
#test-args = [
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#    "-serial", "stdio",
#    "-display", "none"
#]
#run-args = [
#    "-serial", "stdio",
#]
#test-success-exit-code = 33 # (0x10 << 1) | 1
#test-timeout = 300 # 5 minutes
