[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
runner-utils = "0.0.2" # small helper functions for custom runners (e.g. timeouts)
locate-cargo-manifest = "0.2.2" # for locating the kernel's `Cargo.toml`
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
serde_yaml = "0.8.23"
serde = "1.0.136"
serde_derive = "1.0.136"
clap = { version = "3.1.6", features = ["derive"] }
